<resources>
    <string name="app_name">Movie Collector</string>
    <string name="welcome_to_movie_collector">Welcome to Movie Collector!</string>
    <string name="instruction_text_1">Fill out the form about a movie you have watched</string>
    <string name="title_hint">Title</string>
    <string name="director_hint">Director</string>
    <string name="year_hint">Year</string>
    <string name="input_actors_hint">Enter actors separated by commas</string>
    <string name="review_hint">Review</string>
    <string name="rating_hint">Rating (1-10)</string>
    <string name="save_to_collection_txt">Save to Collection</string>
    <string name="add_a_movie_txt">Add a Movie</string>
    <string name="register_movie_txt">Register Movie</string>
    <string name="empty_list_text">No movies in the collection!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_movie_label">Edit the info from the database to your liking</string>
    <string name="edit_movie_info_label">Edit movie info</string>
    <string name="return_to_menu_txt">Return to Menu</string>
    <string name="search_the_collection_label">Search the Collection</string>
    <string name="enter_a_term_to_search_through_the_database_label">Enter a term to search through the database</string>
    <string name="enter_search_term_hint">Enter search term</string>
    <string name="search_label">Find Movie in IMDB</string>
    <string name="select_a_movie_from_the_list_to_get_the_imdb_ratings_txt">Select a movie from the list to get the IMDB ratings</string>
</resources>